@@ -1,3 +1,11 @@
+2024-02-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp--test-container-p): Adapt.
+	(tramp--test-container-oob-p): New defun.
+	(tramp-test17-dired-with-wildcards, tramp-test35-remote-path)
+	(tramp-test41-special-characters): Use it.
+	(tramp--test-set-ert-test-documentation): Use `split-string'.
+
 2024-02-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp--test-set-ert-test-documentation): New defun.
